[package]
name = "jupiter"
version = "0.1.0"
authors = ["Gabby Ortman <gortman@rednovalabs.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.5"
wasm-bindgen = "0.2.28"
wbg-rand = "0.4"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'Window',
  'FileReader',
  'console',
  'HtmlElement',
  'HtmlInputElement',
  'FileList',
  'File',
  'FileReader',
  'InputEvent',
  'Blob',
  'HtmlImageElement'
]